versions/v0.0.1/_sources/autoapi/autointent/custom_types/index.rst.txt
autointent.custom_types
=======================

.. py:module:: autointent.custom_types

.. autoapi-nested-parse::

   Types used throughout AutoIntent library.



Attributes
----------

.. autoapisummary::

   autointent.custom_types.FloatFromZeroToOne
   autointent.custom_types.LabelType
   autointent.custom_types.LabelWithOOS
   autointent.custom_types.ListOfGenericLabels
   autointent.custom_types.ListOfLabels
   autointent.custom_types.ListOfLabelsWithOOS
   autointent.custom_types.MultiLabel
   autointent.custom_types.MultiLabelWithOOS
   autointent.custom_types.SamplerType
   autointent.custom_types.SearchSpacePreset
   autointent.custom_types.SearchSpaceValidationMode
   autointent.custom_types.SimpleLabel
   autointent.custom_types.SimpleLabelWithOOS
   autointent.custom_types.ValidationScheme
   autointent.custom_types.WeightType


Classes
-------

.. toctree::
   :hidden:

   /autoapi/autointent/custom_types/Document
   /autoapi/autointent/custom_types/LogLevel
   /autoapi/autointent/custom_types/NodeType
   /autoapi/autointent/custom_types/RerankedItem
   /autoapi/autointent/custom_types/Split

.. autoapisummary::

   autointent.custom_types.Document
   autointent.custom_types.LogLevel
   autointent.custom_types.NodeType
   autointent.custom_types.RerankedItem
   autointent.custom_types.Split


Package Contents
----------------

.. py:data:: FloatFromZeroToOne

   Float value between 0 and 1, inclusive.

.. py:type:: LabelType
   :canonical: SimpleLabel | MultiLabel


   Type alias for label representation

   - `int`: For single-label classification.
   - `list[int]`: For multi-label classification.

.. py:data:: LabelWithOOS

   Any label that autointent modules can handle.

.. py:data:: ListOfGenericLabels

   List of labels that AutoIntent modules can handle.

.. py:data:: ListOfLabels

   List of labels without OOS-samples that AutoIntent modules can handle.

.. py:data:: ListOfLabelsWithOOS

   List of labels with OOS-samples that AutoIntent modules can handle.

.. py:data:: MultiLabel

   List label for multi-label classification problems.

.. py:data:: MultiLabelWithOOS

   List label for multi-label classification problems with OOS samples.

.. py:data:: SamplerType

   Hyperparameter tuning strategies:

   - `tpe`: :py:class:`optuna.samplers.TPESampler`
   - `random`: :py:class:`optuna.samplers.RandomSampler`

.. py:data:: SearchSpacePreset

   Some presets that our library supports.

.. py:data:: SearchSpaceValidationMode

   Behavior when meet a data-incompatible module in search space:

   - `raise`: raise an error
   - `warning`: warn user
   - `filter`: drop incompatible modules from search space

.. py:data:: SimpleLabel

   Integer label for single-label classification problems.

.. py:data:: SimpleLabelWithOOS

   Integer label for single-label classification problems with OOS samples.

.. py:data:: ValidationScheme

   Validation scheme used in hyperparameter tuning:

   - `ho`: hold-out validation
   - `cv`: cross-validation

.. py:data:: WeightType

   Represents weight calculation methods

   - "uniform": Equal weight for all elements.
   - "distance": Weights based on distance.
   - "closest": Prioritizes closest elements.

